--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,5 @@ browser=chrome
 facebookUrl=https://facebook.com
 eposta=ali@gmail.com
 sifre=Bg5128518.abc
+#Amazon test datalari
+amazonUrl=https://www.amazon.com.tr
